# presence-bot-rs

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  run.sh.template
src/: main.rs
