[package]
name = "presence-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
log = "0.4.20"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", default-features = false,features = ["json","rustls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = {version = "0.7.2", features = ["runtime-tokio","sqlite"]}
teloxide = { version = "0.12.2", default-features = false, features = ["rustls", "ctrlc_handler", "auto-send"] }
tokio = { version = "1.32.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
